# dsb26-basics-of-big-data

./: .gitignore  README.md  main.ipynb  pyproject.toml  technical_report.md
data/customer_segments.parquet/: .part-00000-412e0e89-97dd-47c2-a8fa-a7619b109ffa-c000.snappy.parquet.crc  .part-00001-412e0e89-97dd-47c2-a8fa-a7619b109ffa-c000.snappy.parquet.crc  .part-00002-412e0e89-97dd-47c2-a8fa-a7619b109ffa-c000.snappy.parquet.crc  .part-00003-412e0e89-97dd-47c2-a8fa-a7619b109ffa-c000.snappy.parquet.crc  part-00000-412e0e89-97dd-47c2-a8fa-a7619b109ffa-c000.snappy.parquet  part-00001-412e0e89-97dd-47c2-a8fa-a7619b109ffa-c000.snappy.parquet  part-00002-412e0e89-97dd-47c2-a8fa-a7619b109ffa-c000.snappy.parquet  part-00003-412e0e89-97dd-47c2-a8fa-a7619b109ffa-c000.snappy.parquet
data/enriched_orders.parquet/: .part-00000-c90ebe75-8669-4521-9f70-ed69a5745b0d-c000.snappy.parquet.crc  .part-00001-c90ebe75-8669-4521-9f70-ed69a5745b0d-c000.snappy.parquet.crc  .part-00002-c90ebe75-8669-4521-9f70-ed69a5745b0d-c000.snappy.parquet.crc  .part-00003-c90ebe75-8669-4521-9f70-ed69a5745b0d-c000.snappy.parquet.crc  .part-00004-c90ebe75-8669-4521-9f70-ed69a5745b0d-c000.snappy.parquet.crc  part-00000-c90ebe75-8669-4521-9f70-ed69a5745b0d-c000.snappy.parquet  part-00001-c90ebe75-8669-4521-9f70-ed69a5745b0d-c000.snappy.parquet  part-00002-c90ebe75-8669-4521-9f70-ed69a5745b0d-c000.snappy.parquet  part-00003-c90ebe75-8669-4521-9f70-ed69a5745b0d-c000.snappy.parquet  part-00004-c90ebe75-8669-4521-9f70-ed69a5745b0d-c000.snappy.parquet
