[project]
name = "dsb26-basics-of-big-data"
version = "0.1.0"
description = "Project on Basics of Big Data, part of module 9 of the 2026 Data Science Fundamentals bootcamp by Digital Talent for Chile - SENCE"
readme = "README.md"
requires-python = ">=3.10, < 3.11"
dependencies = [
    "fastparquet>=2026.3.0",
    "ipykernel>=7.2.0",
    "ipython>=8.39.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "pyarrow>=23.0.1",
    "pyspark>=4.1.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tables>=3.10.1",
]
